--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 	<table border="1">
 		<tr>
 			<td>
+				หน้แรก
+			</td>
+		</tr>
+		<tr>
+			<td>
+				หน้า2
+			</td>
+		</tr>
+		<tr>
+			<td>
+				หน้า3
+			</td>
+		</tr>
+		<tr>
+			<td>
 				1
 			</td>
 		</tr>
 		<tr>
 			<td>
 				2
-			</td>
-		</tr>
-		<tr>
-			<td>
-				3
-			</td>
-		</tr>
-		<tr>
-			<td>
-				4
-			</td>
-		</tr>
-		<tr>
-			<td>
-				5
 			</td>
 		</tr>
 	</table>
